[gd_scene load_steps=5 format=3 uid="uid://bja6eqn3i7pyw"]

[ext_resource type="Script" path="res://scenes/projectiles/characters/Marionette.gd" id="1_bvghw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_b001a"]
radius = 1000.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qrv70"]
size = Vector2(50, 50)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_mgwfn"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false

[node name="Marionette" type="Area2D" groups=["character"]]
collision_mask = 3
script = ExtResource("1_bvghw")
targetDistance = 2000
untargetDistance = 4000
maxHealth = 60
team = 10000
baseAcceleration = 3000
baseSpeed = 500
metadata/_edit_group_ = true

[node name="Area2D" type="Area2D" parent="."]
visible = false
collision_layer = 2
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_b001a")

[node name="Nametag" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.5
offset_top = -60.0
offset_right = 24.5
offset_bottom = -34.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 0
text = "Marionette"
horizontal_alignment = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -25.0
offset_top = -25.0
offset_right = 25.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_qrv70")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_mgwfn")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_targeting_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_targeting_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
